--- a/jenkins-slave/Dockerfile
+++ b/jenkins-slave/Dockerfile
@@ -33,11 +33,11 @@ RUN usermod -aG docker jenkins
 
 # Add public key for Jenkins login
 RUN mkdir /home/jenkins/.ssh
-
 COPY /files/authorized_keys /home/jenkins/.ssh/authorized_keys
 
 RUN chown -R jenkins /home/jenkins
 RUN chgrp -R jenkins /home/jenkins
+
 RUN chmod 600 /home/jenkins/.ssh/authorized_keys
 RUN chmod 700 /home/jenkins/.ssh
 
@@ -49,8 +49,20 @@ COPY certs/ca.pem /home/jenkins/.docker/ca.pem
 COPY certs/cert.pem /home/jenkins/.docker/cert.pem
 COPY certs/key.pem /home/jenkins/.docker/key.pem
 
+RUN chmod +r /home/jenkins/.docker/ca.pem
+RUN chmod +r /home/jenkins/.docker/cert.pem
+RUN chmod +r /home/jenkins/.docker/key.pem
+
+RUN chown -R jenkins:jenkins /home/jenkins/.docker
+
 # Set Name Servers
 COPY /files/resolv.conf /etc/resolv.conf
+
+VOLUME ["/home/jenkins/workspace"]
+
+ENV DOCKER_HOST tcp://172.17.0.1:4243
+ENV DOCKER_TLS_VERIFY 1
+ENV DOCKER_CERT_PATH /home/jenkins/.docker
 
 # Expose SSH port and run SSHD
 EXPOSE 22
